--- a/Koha/Plugin/Tamil/Mirabel/home.tt
+++ b/Koha/Plugin/Tamil/Mirabel/home.tt
@@ -41,6 +41,10 @@
     </p>
    </li>
   </ol>
+  <p> 
+   <b>Pour les non-partenaires</b>, Koha ⇄ Mir@bel permet d'afficher sur la
+   page de détail d'une notice bibliographique les accès publics à une revue.
+  </p>
  </div>
 </div>
 
