--- a/Koha/Plugin/Tamil/Mirabel/configure.tt
+++ b/Koha/Plugin/Tamil/Mirabel/configure.tt
@@ -63,26 +63,27 @@
    </li>
    <li>
     <label for="location" style="height: 50px;">Emplacement : </label>
-    <input type="radio" name="opac.biblio.affiche.ou" value="div" [% IF c.opac.biblio.affiche.ou == 'div' %]checked[% END %]/>
-    Dans le pavé biblio, après le champ identifié par cet id :
-    <input id="opac.biblio.affiche.id" type="text" name="opac.biblio.affiche.id" size="15" value="[% c.opac.biblio.affiche.id %]" /> 
-    <br/>
     <input type="radio" name="opac.biblio.affiche.ou" value="ex_dessus" [% IF c.opac.biblio.affiche.ou == 'ex_dessus' %]checked[% END %] />
-    Entre le pavé biblio et celui des exemplaires
+    <span>Entre le pavé biblio et celui des exemplaires</span>
     <br/>
     <input type="radio" name="opac.biblio.affiche.ou" value="ex_dans" [% IF c.opac.biblio.affiche.ou == 'ex_dans' %]checked[% END %] />
-    Dans un nouvel onglet du pavé des exemplaires
+    <span>Dans un nouvel onglet du pavé des exemplaires dont l'intitulé sera :</span>
+    <input id="opac.biblio.affiche.itemlabel" type="text" name="opac.biblio.affiche.itemlabel" size="15" value="[% c.opac.biblio.affiche.itemlabel %]" />
+    <br/>
+    <input type="radio" name="opac.biblio.affiche.ou" value="div" [% IF c.opac.biblio.affiche.ou == 'div' %]checked[% END %]/>
+    <span>Dans le pavé biblio, après le champ identifié par cet id :</span>
+    <input id="opac.biblio.affiche.id" type="text" name="opac.biblio.affiche.id" size="15" value="[% c.opac.biblio.affiche.id %]" />
    </li>
    <li>
     <label for="opac.biblio.cherche" style="height: 50px;">Recherche par : </label>
     <input type="radio" name="opac.biblio.cherche" value="issn" [% IF c.opac.biblio.cherche == 'issn' %]checked[% END %]/>
-    ISSN
+    <span>ISSN</span>
     <br/>
     <input type="radio" name="opac.biblio.cherche" value="biblionumber" [% IF c.opac.biblio.cherche == 'biblionumber' %]checked[% END %]/>
-    biblionumber
+    <span>biblionumber</span>
     <br/>
-    <input type="radio" name="opac.biblio.cherche" value="ppn" [% IF c.opac.biblio.cherche == 'ppn' %]checked[% END %]/>
-    PPN
+    <input type="radio" id="opac.biblio.cherche" name="opac.biblio.cherche" value="ppn" [% IF c.opac.biblio.cherche == 'ppn' %]checked[% END %]/>
+    <span>PPN</span>
    </li>
    <li>
     <label for="opac.biblio.template">Template : </label>
