--- a/Koha/Plugin/Tamil/Mirabel/home.tt
+++ b/Koha/Plugin/Tamil/Mirabel/home.tt
@@ -36,8 +36,9 @@
    </li>
    <li>
     <p>
-     <b>LISTE DES ACCÈS</b> — Dans la page de détail d'une notice bibliographique
-     d'un périodique tous ses accès sont affichés.
+     <b>LISTE DES ACCÈS</b> — À l'OPAC et en PRO, dans la page de détail d'une
+     notice bibliographique et la page de résultat d'une recherche, les accès
+     Mir@bel aux ressources sont affichés.
     </p>
    </li>
   </ol>
