--- a/Koha/Plugin/Tamil/Mirabel/home.tt
+++ b/Koha/Plugin/Tamil/Mirabel/home.tt
@@ -2,17 +2,19 @@
 
 <style>
 .markdown {
-  font-size: 100%;
+  font-size: 120%;
 }
-.markdown h2 {
+.markdown h2, .markdown h3 {
   margin-top: 20px;
 }
 .markdown img {
   width: 100%;
 }
+ul li, ol li { margin-bottom:10px; }
+
 </style>
 
-<div class="row">
+<div class="markdown">
   [% markdown %]
 </div>
 
