--- a/Koha/Plugin/Tamil/Mirabel/configure.tt
+++ b/Koha/Plugin/Tamil/Mirabel/configure.tt
@@ -3,9 +3,11 @@
 <h1>Configuration de Koha ⇄ Mir@bel</h1>
 
 <form method="post">
+ [% INCLUDE 'csrf-token.inc' %]
 
  <input type="hidden" name="class" value="[% CLASS %]"/>
  <input type="hidden" name="method" value="[% METHOD %]"/>
+ <input type="hidden" name="op" value="cud-save"/>
 
  <fieldset class="rows">
   <legend>Accès à Mir@bel</legend>
