--- a/Koha/Plugin/Tamil/Mirabel/head.tt
+++ b/Koha/Plugin/Tamil/Mirabel/head.tt
@@ -12,7 +12,7 @@
 </div>
 
 <div class="main container-fluid">
- <div class="row-fluid">
+ <div class="row">
 
   <div class="col-md-2">
    <div id="navmenu">
